--- a/src/content/docs/fr/marketing/seo.mdx
+++ b/src/content/docs/fr/marketing/seo.mdx
@@ -7,10 +7,13 @@ weight: 3
 import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
 > [!INFO] Information
-> Ce Récap' sera bientôt disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
+> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 
-
-
+<SrtPlayer
+  client:only="react"
+  audioSrc="/podcasts/marketing/seo.m4a"
+  srtUrl="/podcasts/marketing/seo.srt"
+/>
 
 ## Introduction au SEO (Search Engine Optimization)
 
