--- a/src/content/docs/fr/marketing/strategy-social-media.mdx
+++ b/src/content/docs/fr/marketing/strategy-social-media.mdx
@@ -9,6 +9,13 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 > [!INFO] Information
 > Ce Récap' sera bientôt disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 
+
+<SrtPlayer
+  client:only="react"
+  audioSrc="/podcasts/marketing/strategy-social-media.m4a"
+  srtUrl="/podcasts/marketing/strategy-social-media.srt"
+/>
+
 Le **marketing sur les réseaux sociaux** consiste à utiliser ces plateformes pour promouvoir une marque, un produit ou un service, tout en développant **visibilité, engagement et notoriété**.
 
 ---
