--- a/src/content/docs/fr/marketing/strategy-social-media.mdx
+++ b/src/content/docs/fr/marketing/strategy-social-media.mdx
@@ -7,8 +7,7 @@ weight: 4
 import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
 > [!INFO] Information
-> Ce Récap' sera bientôt disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-
+> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 
 <SrtPlayer
   client:only="react"
