--- a/src/content/docs/fr/marketing/rgpd.mdx
+++ b/src/content/docs/fr/marketing/rgpd.mdx
@@ -5,6 +5,18 @@ weight: 5
 ---
 
 
+import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
+
+> [!INFO] Information
+> Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
+
+<SrtPlayer
+  client:only="react"
+  audioSrc="/podcasts/marketing/rgpd.m4a"
+  srtUrl="/podcasts/marketing/rgpd.srt"
+/>
+
+
 Le RGPD est **la réglementation européenne** qui encadre la collecte et le traitement des données personnelles au sein de l’Union Européenne.
 
 ---
