--- a/src/content/docs/fr/ux-personalization.mdx
+++ b/src/content/docs/fr/ux-personalization.mdx
@@ -7,7 +7,7 @@ weight: 7
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 > [!INFO] Information
-> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
+> Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 
 <SrtPlayer
   client:only="react"
