--- a/src/content/docs/fr/ux-mapping.mdx
+++ b/src/content/docs/fr/ux-mapping.mdx
@@ -8,7 +8,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 
 > [!INFO] Information
-> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
+> Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 
 
 <SrtPlayer
