--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -10,7 +10,7 @@ Ici, tu trouveras un condensé des notions essentielles pour comprendre, apprend
 UIX Recap est pensé comme un support clair et synthétique : un outil pratique pour réviser, enseigner ou s’inspirer.
 
 
-## 🎯 Objectifs du site
+## Objectifs du site
 
 - **Proposer un récapitulatif clair et structuré** des bases du design UX/UI.
 - **Fournir des méthodes et outils concrets** pour les étudiants, designers et développeurs.
