--- a/src/content/docs/fr/index.mdx
+++ b/src/content/docs/fr/index.mdx
@@ -9,14 +9,12 @@ Ici, tu trouveras un condensé des notions essentielles pour comprendre, apprend
 
 UIX Recap est pensé comme un support clair et synthétique : un outil pratique pour réviser, enseigner ou s’inspirer.
 
-
-## 🎯 Objectifs du site
+## Objectifs du site
 
 - **Proposer un récapitulatif clair et structuré** des bases du design UX/UI.
 - **Fournir des méthodes et outils concrets** pour les étudiants, designers et développeurs.
 - **Servir de référence rapide** avant un examen, un projet ou un atelier de conception.
 
 ---
-
 
 > Si vous souhaitez contribuer à l’amélioration de ce site, n’hésitez pas à me contact via mon email batsave.pro[@]gmail.com
