--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -20,3 +20,14 @@ UIX Recap est pensé comme un support clair et synthétique : un outil pratique 
 
 
 > Si vous souhaitez contribuer à l’amélioration de ce site, n’hésitez pas à me contact via mon email batsave.pro[@]gmail.com
+
+
+
+
+> [!INFO] Engagements du site
+>UIX Recap s’inscrit dans une démarche de **responsabilité numérique** :
+>- Respecter au mieux les principes d’**accessibilité** pour rendre le contenu utilisable par tous.
+>- Limiter l’impact environnemental du site grâce à un design sobre et optimisé.
+>
+><div id="wcb" class="carbonbadge"></div>
+><script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
