--- a/src/content/docs/fr/index.mdx
+++ b/src/content/docs/fr/index.mdx
@@ -15,6 +15,20 @@ UIX Recap est pensé comme un support clair et synthétique : un outil pratique 
 - **Fournir des méthodes et outils concrets** pour les étudiants, designers et développeurs.
 - **Servir de référence rapide** avant un examen, un projet ou un atelier de conception.
 
+## Contribuer
+
+Le projet est collaboratif !
+Vous pouvez proposer des corrections ou des ajouts de contenu directement via des Pull Requests sur GitHub.
+
 ---
 
 > Si vous souhaitez contribuer à l’amélioration de ce site, n’hésitez pas à me contact via mon email batsave.pro[@]gmail.com
+
+<br />
+<br />
+
+> [!INFO] Engagements du site
+> UIX Recap s’inscrit dans une démarche de **responsabilité numérique** :
+>
+> - Respecter au mieux les principes d’**accessibilité** pour rendre le contenu utilisable par tous.
+> - Limiter l’impact environnemental du site grâce à un design sobre et optimisé.
