Ajout d'un lien "En savoir plus" vers le podcast IA dans plusieurs fichiers de documentation

--- a/src/content/docs/fr/ux-mapping.mdx
+++ b/src/content/docs/fr/ux-mapping.mdx
@@ -9,6 +9,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
+> <br/>[En savoir plus](/fr/why-ai-podcast)
 
 
 <SrtPlayer
