--- a/src/content/docs/fr/marketing/index.mdx
+++ b/src/content/docs/fr/marketing/index.mdx
@@ -8,7 +8,7 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-> [Plus d'information](/why-ai-podcast)
+> <br/>[En savoir plus](/fr/why-ai-podcast)
 
 <SrtPlayer
   client:only="react"
