Ajout d'un lien "En savoir plus sur l'utilisation de l'IA" dans la section de contribution

--- a/src/content/docs/fr/index.mdx
+++ b/src/content/docs/fr/index.mdx
@@ -32,3 +32,5 @@ Vous pouvez proposer des corrections ou des ajouts de contenu directement via de
 >
 > - Respecter au mieux les principes d’**accessibilité** pour rendre le contenu utilisable par tous.
 > - Limiter l’impact environnemental du site grâce à un design sobre et optimisé.
+>
+> [En savoir plus sur l'utilisation de l'IA](/fr/why-ai-podcast)
