Correction de la formulation et mise à jour du contact dans le fichier "Pourquoi proposer une version audio générée par IA ?"

--- a/src/content/docs/fr/why-ai-podcast.mdx
+++ b/src/content/docs/fr/why-ai-podcast.mdx
@@ -15,14 +15,14 @@ C’est pourquoi nous souhaitons clarifier **dès le départ** :
 - L’objectif n’est **pas de remplacer une voix humaine**, mais de **rendre nos contenus plus accessibles** (malvoyance, dyslexie, mobilité, etc.).
 - Toute personne souhaitant proposer une alternative humaine est la **bienvenue** (voir plus bas).
 
-**UIX Recap** est un projet étudiant, indépendant et communautaire, qui se veut exemplaire sur le plan de la **sobriété numérique**.  
+**UIX Recap** est un projet étudiant, indépendant et communautaire, qui essaye d’être en avance sur le plan de la **sobriété numérique**.  
 Nous refusons les effets de mode inutiles.  
-Nous privilégions le **sens**, l’**inclusion**, et la **responsabilité**.
+Nous privilégions le **sens**, l’**inclusion** et la **responsabilité**.
 
 ---
 
-**UIX Recap** est un projet communautaire initié dans le cadre d’un parcours étudiant en UX Design. Notre objectif est de partager des ressources utiles, inclusives et accessibles, tout en respectant une démarche de sobriété numérique.  
-C’est dans cette optique que certaines publications sont proposées en **version audio générée automatiquement par IA**.
+**UIX Recap** est un projet communautaire initié dans le cadre de mon parcours étudiant en UX Design. Notre objectif est de partager des ressources utiles, inclusives et accessibles, tout en respectant une démarche de sobriété numérique.  
+C’est dans cette optique que certaines publications sont proposées en **version audio générée par IA**.
 
 ## Accessibilité : un enjeu clé
 
@@ -61,7 +61,7 @@ C’est pourquoi nous affirmons que :
 Si vous souhaitez proposer une **version non-IA** d’un podcast (lecture humaine, voix off volontaire, interprétation collective), **vous pouvez nous contacter**.  
 UIX Recap est un projet ouvert et participatif : nous accueillons volontiers toutes les contributions qui respectent ses valeurs.
 
-> Contact : batsave.pro[@]gmail.com
+> Contact : [batsave.pro@gmail.com](mailto:batsave.pro@gmail.com)
 
 ---
 
